<resources>
    <string name="app_name">5.2.1.InternalFiles</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="login">login</string>
    <string name="registration">Registration</string>
    <string name="save_data_in_exsternal_storage">Хранить логин и пароль во внешнем хранилище</string>
</resources>
